--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,25 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --vampire-black: #0B0B0B;
+  --grey:#2C2C2A;
+  --foreground: #ededed;
+
 }
 
 @theme inline {
   --color-background: var(--background);
+  --color-vampire: var(--vampire-black);
+  --color-grey: var(--grey);
   --color-foreground: var(--foreground);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --font-primary: var(--font-fredoka-one);
+  --font-playfair: var(--font-playfair);
+  --font-fredoka: var(--font-fredoka-one);  
+  --font-ui: var(--font-poppins);
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,9 +28,118 @@
     --foreground: #ededed;
   }
 }
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans); /* let Next control fonts */
+}
+.hero-linear-gradient{
+    background-image: linear-gradient(
+    0deg,
+    hsl(90deg 6% 26%) 0%,
+    hsl(90deg 7% 24%) 16%,
+    hsl(90deg 7% 21%) 32%,
+    hsl(90deg 8% 19%) 47%,
+    hsl(90deg 9% 17%) 59%,
+    hsl(90deg 10% 15%) 68%,
+    hsl(90deg 11% 12%) 75%,
+    hsl(91deg 13% 10%) 81%,
+    hsl(87deg 18% 8%) 86%,
+    hsl(86deg 37% 5%) 91%,
+    hsl(91deg 100% 2%) 95%,
+    hsl(0deg 0% 0%) 100%
+  );
+}
+.glassyheader{
+  /* From https://css.glass */
+background: rgba(255, 255, 255, 0.43);
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(6.3px);
+-webkit-backdrop-filter: blur(6.3px);
+border: 1px solid rgba(158, 162, 147, 0.5);
+}
+.glassyButton{
+  /* From https://css.glass */
+background: rgba(255, 255, 255, 0.26);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(3.5px);
+-webkit-backdrop-filter: blur(3.5px);
+border: 1px solid rgba(255, 255, 255, 0.37);
+}
+.grid-background {
+  background-color: transparent;
+  background-image: 
+    repeating-linear-gradient(
+      90deg,
+      transparent 0,
+      transparent 11px,
+      rgba(255, 255, 255, 0.01) 11px,
+      rgba(255, 255, 255, 0.01) 12px,
+      transparent 12px,
+      transparent 14px,
+      rgba(255, 255, 255, 0.01) 14px,
+      rgba(255, 255, 255, 0.01) 15px,
+      transparent 15px,
+      transparent 25px
+    ),
+    repeating-linear-gradient(
+      0deg,
+      transparent 0,
+      transparent 11px,
+      rgba(255, 255, 255, 0.01) 11px,
+      rgba(255, 255, 255, 0.01) 12px,
+      transparent 12px,
+      transparent 14px,
+      rgba(255, 255, 255, 0.01) 14px,
+      rgba(255, 255, 255, 0.01) 15px,
+      transparent 15px,
+      transparent 25px
+    ),
+    radial-gradient(
+      circle,
+      rgba(255, 255, 255, 0.05) 0%,
+      rgba(255, 255, 255, 0.05) 1px,
+      rgba(255, 255, 255, 0.01) 2px,
+      transparent 3px
+    );
+
+  background-size: 25px 25px;
+  background-position: 12.5px 12.5px;
+}
+.shine-text {
+  font-weight: 700;
+  background: linear-gradient(
+    120deg,
+    #d1cece 40%,
+    #a79a9a 50%,
+    #fffefe 60%
+  );
+  background-size: 200% auto;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+
+  animation: shine 2s linear infinite;
+}
+
+@keyframes shine {
+  from {
+    background-position: 200% center;
+  }
+  to {
+    background-position: -200% center;
+  }
 }
